# Coffee-Engine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  genindex.html  index.html  objects.inv  remove_imports.bat  search.html  searchindex.js  vcpkg.json
CoffeeEditor/: imgui.ini
CoffeeEditor/Panels/: ImportPanel.cpp  ImportPanel.h  InspectorPanel.cpp  InspectorPanel.h  MonitorPanel.cpp  OutputPanel.h  ProjectSettingsPanel.cpp  ProjectSettingsPanel.h  SceneTreePanel.cpp  SceneTreePanel.h
CoffeeEditor/assets/audio/Wwise Project/Events/: Default Work Unit.wwu
CoffeeEditor/assets/scripts/: test.lua  test2.lua
CoffeeEditor/assets/shaders/: BloomShader.glsl  DefaultCustomShader.glsl  DownsamplingShader.glsl  FXAACompactShader.vs  FXAAShader.glsl  FogShader.glsl  Nvidia-FXAAShader.glsl  SimpleGridShader.glsl  StandardShader.frag  UpsamplingShader.glsl
CoffeeEditor/src/: EditorLayer.cpp  EditorLayer.h
CoffeeEngine/: CMakeLists.txt
CoffeeEngine/src/: pch.h
CoffeeEngine/src/CoffeeEngine/Animation/: Animation.cpp  Animation.h  AnimationSystem.cpp  AnimationSystem.h  Skeleton.cpp  Skeleton.h
CoffeeEngine/src/CoffeeEngine/Audio/: Audio.cpp  Audio.h  AudioFootsteps.cpp  AudioFootsteps.h  AudioZone.cpp  AudioZone.h  ReverbSystem.cpp
CoffeeEngine/src/CoffeeEngine/Core/: Application.cpp  Application.h  Base.h  ControllerCodes.h  FileDialog.cpp  FileDialog.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Profiler.h  Stopwatch.h  SystemInfo.h  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
CoffeeEngine/src/CoffeeEngine/Core/DataStructures/: Octree.h
CoffeeEngine/src/CoffeeEngine/Embedded/: BRDFLUTShader.inl  EquirectToCubemap.inl  IrradianceConvolution.inl  LineShader.inl  PreFilterConvolutionShader.inl  QuadShader.inl  ShadowShader.inl  SimpleDepthShader.inl  StandardShader.inl
CoffeeEngine/src/CoffeeEngine/Events/: ApplicationEvent.h  Event.h
CoffeeEngine/src/CoffeeEngine/IO/: ImportSettings.h  Resource.h  ResourceImporter.cpp  ResourceImporter.h  ResourceLoader.cpp  ResourceLoader.h  ResourceSaver.h  ResourceUtils.h
CoffeeEngine/src/CoffeeEngine/IO/ImportData/: CubemapImportData.h  ImportData.cpp  ImportData.h  ImportDataUtils.cpp  MaterialImportData.h  MeshImportData.h  ModelImportData.h  ShaderImportData.h  Texture2DImportData.h
CoffeeEngine/src/CoffeeEngine/IO/Serialization/: GLMSerialization.h
CoffeeEngine/src/CoffeeEngine/ImGui/: ImGuiExtras.cpp  ImGuiExtras.h  ImGuiLayer.cpp
CoffeeEngine/src/CoffeeEngine/Input/: Gamepad.cpp  Gamepad.h  InputBinding.cpp  InputBinding.h
CoffeeEngine/src/CoffeeEngine/Math/: BoundingBox.h
CoffeeEngine/src/CoffeeEngine/MissionManager/: misionManager.lua
CoffeeEngine/src/CoffeeEngine/Navigation/: NavMesh.cpp  NavMesh.h  NavMeshPathfinding.cpp  NavMeshPathfinding.h
CoffeeEngine/src/CoffeeEngine/ParticleManager/: ParticleManager.cpp  ParticleManager.h
CoffeeEngine/src/CoffeeEngine/Physics/: Collider.cpp  Collider.h  CollisionSystem.cpp  CollisionSystem.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
CoffeeEngine/src/CoffeeEngine/Project/: Project.cpp  Project.h
CoffeeEngine/src/CoffeeEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureCache.cpp  TextureCache.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
CoffeeEngine/src/CoffeeEngine/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Prefab.cpp  Prefab.h  PrimitiveMesh.cpp  PrimitiveMesh.h  Scene.cpp  Scene.h  SceneCamera.h  SceneManager.cpp  SceneManager.h  SceneTree.cpp  SceneTree.h
CoffeeEngine/src/CoffeeEngine/Scene/Components/: ActiveComponent.cpp  LightComponent.h  (+44 more)
CoffeeEngine/src/CoffeeEngine/Scripting/: GameSaver.cpp  GameSaver.h  IScriptingBackend.h  Script.h  ScriptManager.h
CoffeeEngine/src/CoffeeEngine/UI/: UIAnchor.cpp  UIAnchor.h  UIManager.cpp  UIManager.h
Editor/: CMakeLists.txt  imgui.ini
Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ImportPanel.h  MonitorPanel.cpp  OutputPanel.cpp  OutputPanel.h  Panel.h  ProjectSettingsPanel.cpp  ProjectSettingsPanel.h  SceneTreePanel.cpp  SceneTreePanel.h
Editor/assets/shaders/: FXAAShader.glsl  SimpleGridShader.glsl  SkyboxShader.glsl
Editor/src/: EditorLayer.cpp  EditorLayer.h
Runtime/src/: RuntimeLayer.cpp  RuntimeLayer.h
TeaEditor/src/: EditorLayer.cpp
TeaEngine/src/TeaEngine/Core/: Log.h
TeaEngine/src/TeaEngine/ImGui/: ImGuiLayer.h
TeaEngine/src/TeaEngine/Renderer/: Shader.h  Texture.h
_sources/getting_started/configuring_an_ide/: visual_studio.rst.txt
about/: acknowledgements.html  introduction.html  list_of_features.html  pitch.html  system_requirments.html
classes/: core.html  events.html  imgui.html  io.html  project.html  renderer.html  scene.html
getting_started/: index.html  styling.html
getting_started/configuring_an_ide/: clion.html  engine_development.html  getting_source.html  visual_studio.html  visual_studio_code.html
manual/: scripting.html
(+29 files in other folders)
